--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Pensando Computacionalmente</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="css/pcomp.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Pensando Computacionalmente</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Início
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="turmas.html">Turmas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contato.html">Contato</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Content -->
+  <div class="container">
+
+    <!-- Heading Row -->
+    <div class="row align-items-center my-4">
+      <div class="col-lg-7">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="https://i.imgur.com/eoZhJfJ.png" alt="">
+      </div>
+      <!-- /.col-lg-8 -->
+      <div class="col-lg-5">
+        <h1><br></h1>
+        <p>O Pensando Computacionalmente é um curso disponível aos acadêmicos de todos os cursos da Universidade Federal do Rio Grande - FURG, cuja finalidade é desenvolver o raciocínio lógico e computacional para a resolução de problemas.</p>
+        <a type="button" href="contato.html" class="btn btn-danger" target="_blank">Entrar em Contato</a>
+
+      </div>
+      <!-- /.col-md-4 -->
+    </div>
+    <!-- /.row -->
+
+    <!-- Call to Action Well -->
+    <!--div class="card text-white bg-secondary my-5 py-4 text-center">
+      <div class="card-body">
+        <p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p>
+      </div>
+    </div-->
+
+    <!-- Content Row -->
+    <div class="row">
+      <div class="col-md-4 mb-5">
+        <iframe class="w-100" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpenscompfurg&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId" width="340" height="410" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+      </div>
+      <!-- /.col-md-4 -->
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Turmas</h2>
+            <p class="card-text">Muitos alunos já passaram pelo Pensando Computacionalmente. Veja as fotos!</p>
+            <div id='photoalign'>
+              <img src="resources/thumbpic.jpg" alt="Foto de uma das turmas" class="img-thumbnail">
+            </div>
+          </div>
+          <div class="card-footer">
+            <a href="turmas.html" class="btn btn-danger btn-sm" target="_blank">Ver tudo</a>
+          </div>
+        </div>
+      </div>
+      <!-- /.col-md-4 -->
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Pensamento Computacional</h2>
+            <p class="card-text">Principal assunto do curso, o pensamento 
+              computacional vem se consolidando como disciplina fundamental 
+              na formação de todos os indivíduos, independentemente da área
+              de atuação.</p>
+          </div>
+          <div class="card-footer">
+            <a href="https://pt.wikipedia.org/wiki/Pensamento_computacional" target="_blank" class="btn btn-danger btn-sm">Saiba mais</a>
+          </div>
+        </div>
+      </div>
+      <!-- /.col-md-4 -->
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+  <br><br> <!--small screen compatibility-->
+  <!-- Footer -->
+  <footer class="py-2 fixed-bottom">
+    <div class="container">
+      <div class="sm-buttons">
+        <a class="sociala" title="Facebook" href="https://fb.me/penscompfurg" target="_blank"><button type="button" class="btn btn-social-icon btn-facebook btn-rounded"><i class="fa fa-facebook"></i></button></a>
+        <a class="sociala" title="Instagram" href="https://instagr.am/penscompfurg" target="_blank"><button type="button" class="btn btn-social-icon btn-instagram btn-rounded"><i class="fa fa-instagram"></i></button></a>
+      </div>
+      <div id="credits">
+        <p id="creditstext">Desenvolvido em 2020 por <a href="https://github.com/mateuscv">@mateuscv</a> | Equipe do Pensando Computacionalmente.</p>
+      </div>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
+</html>
